src/moe/lemonneko/meow/antlr/MeowParser.java
// Generated from E:/Projects/IdeaProjects/Meow/src/moe/lemonneko/meow/antlr\Meow.g4 by ANTLR 4.8
package moe.lemonneko.meow.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MeowParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SINGLE_LINE_COMMENT=1, MULTI_LINE_COMMENT=2, DOCUMENT=3, PACKAGE=4, USING=5, 
		DOT=6, CLASS=7, TYPE=8, LEFT_BRACE=9, RIGHT_BRACE=10, VAR=11, VAL=12, 
		COLON=13, EQUALS=14, FUN=15, LEFT_BRACKET=16, RIGHT_BRACKET=17, PRIVATE=18, 
		PROTECTED=19, PUBLIC=20, STATIC=21, COMMA=22, DECIMAL_INTEGER=23, HEX_INTEGER=24, 
		BINARY_INTEGER=25, DECIMAL_FLOAT=26, STRING=27, MUL=28, DIV=29, ADD=30, 
		SUB=31, ID=32, WS=33;
	public static final int
		RULE_compilation_unit = 0, RULE_file = 1, RULE_comment = 2, RULE_file_header = 3, 
		RULE_file_content = 4, RULE_package_define = 5, RULE_package_using = 6, 
		RULE_package_name = 7, RULE_class_definition = 8, RULE_class_body = 9, 
		RULE_constant = 10, RULE_variable = 11, RULE_function = 12, RULE_function_define = 13, 
		RULE_function_parameter = 14, RULE_function_body = 15, RULE_modifier = 16, 
		RULE_function_invoke = 17, RULE_integer = 18, RULE_float_number = 19, 
		RULE_value = 20, RULE_expression = 21;
	private static String[] makeRuleNames() {
		return new String[] {
			"compilation_unit", "file", "comment", "file_header", "file_content", 
			"package_define", "package_using", "package_name", "class_definition", 
			"class_body", "constant", "variable", "function", "function_define", 
			"function_parameter", "function_body", "modifier", "function_invoke", 
			"integer", "float_number", "value", "expression"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, "'package'", "'using'", "'.'", "'class'", null, 
			"'{'", "'}'", "'var'", "'val'", "':'", "'='", "'fun'", "'('", "')'", 
			"'private'", "'protected'", "'public'", "'static'", "','", null, null, 
			null, null, null, "'*'", "'/'", "'+'", "'-'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "SINGLE_LINE_COMMENT", "MULTI_LINE_COMMENT", "DOCUMENT", "PACKAGE", 
			"USING", "DOT", "CLASS", "TYPE", "LEFT_BRACE", "RIGHT_BRACE", "VAR", 
			"VAL", "COLON", "EQUALS", "FUN", "LEFT_BRACKET", "RIGHT_BRACKET", "PRIVATE", 
			"PROTECTED", "PUBLIC", "STATIC", "COMMA", "DECIMAL_INTEGER", "HEX_INTEGER", 
			"BINARY_INTEGER", "DECIMAL_FLOAT", "STRING", "MUL", "DIV", "ADD", "SUB", 
			"ID", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Meow.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MeowParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class Compilation_unitContext extends ParserRuleContext {
		public FileContext file() {
			return getRuleContext(FileContext.class,0);
		}
		public TerminalNode EOF() { return getToken(MeowParser.EOF, 0); }
		public Compilation_unitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compilation_unit; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MeowVisitor ) return ((MeowVisitor<? extends T>)visitor).visitCompilation_unit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Compilation_unitContext compilation_unit() throws RecognitionException {
		Compilation_unitContext _localctx = new Compilation_unitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_compilation_unit);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			file();
			setState(45);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FileContext extends ParserRuleContext {
		public File_headerContext file_header() {
			return getRuleContext(File_headerContext.class,0);
		}
		public File_contentContext file_content() {
			return getRuleContext(File_contentContext.class,0);
		}
		public List<CommentContext> comment() {
			return getRuleContexts(CommentContext.class);
		}
		public CommentContext comment(int i) {
			return getRuleContext(CommentContext.class,i);
		}
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MeowVisitor ) return ((MeowVisitor<? extends T>)visitor).visitFile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_file);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(47);
			file_header();
			setState(48);
			file_content();
			setState(52);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SINGLE_LINE_COMMENT) | (1L << MULTI_LINE_COMMENT) | (1L << DOCUMENT))) != 0)) {
				{
				{
				setState(49);
				comment();
				}
				}
				setState(54);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CommentContext extends ParserRuleContext {
		public TerminalNode SINGLE_LINE_COMMENT() { return getToken(MeowParser.SINGLE_LINE_COMMENT, 0); }
		public TerminalNode MULTI_LINE_COMMENT() { return getToken(MeowParser.MULTI_LINE_COMMENT, 0); }
		public TerminalNode DOCUMENT() { return getToken(MeowParser.DOCUMENT, 0); }
		public CommentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comment; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MeowVisitor ) return ((MeowVisitor<? extends T>)visitor).visitComment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CommentContext comment() throws RecognitionException {
		CommentContext _localctx = new CommentContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_comment);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SINGLE_LINE_COMMENT) | (1L << MULTI_LINE_COMMENT) | (1L << DOCUMENT))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class File_headerContext extends ParserRuleContext {
		public Package_defineContext package_define() {
			return getRuleContext(Package_defineContext.class,0);
		}
		public List<Package_usingContext> package_using() {
			return getRuleContexts(Package_usingContext.class);
		}
		public Package_usingContext package_using(int i) {
			return getRuleContext(Package_usingContext.class,i);
		}
		public File_headerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file_header; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MeowVisitor ) return ((MeowVisitor<? extends T>)visitor).visitFile_header(this);
			else return visitor.visitChildren(this);
		}
	}

	public final File_headerContext file_header() throws RecognitionException {
		File_headerContext _localctx = new File_headerContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_file_header);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PACKAGE) {
				{
				setState(57);
				package_define();
				}
			}

			setState(63);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==USING) {
				{
				{
				setState(60);
				package_using();
				}
				}
				setState(65);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class File_contentContext extends ParserRuleContext {
		public List<Class_definitionContext> class_definition() {
			return getRuleContexts(Class_definitionContext.class);
		}
		public Class_definitionContext class_definition(int i) {
			return getRuleContext(Class_definitionContext.class,i);
		}
		public List<VariableContext> variable() {
			return getRuleContexts(VariableContext.class);
		}
		public VariableContext variable(int i) {
			return getRuleContext(VariableContext.class,i);
		}
		public List<ConstantContext> constant() {
			return getRuleContexts(ConstantContext.class);
		}
		public ConstantContext constant(int i) {
			return getRuleContext(ConstantContext.class,i);
		}
		public List<FunctionContext> function() {
			return getRuleContexts(FunctionContext.class);
		}
		public FunctionContext function(int i) {
			return getRuleContext(FunctionContext.class,i);
		}
		public File_contentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file_content; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MeowVisitor ) return ((MeowVisitor<? extends T>)visitor).visitFile_content(this);
			else return visitor.visitChildren(this);
		}
	}

	public final File_contentContext file_content() throws RecognitionException {
		File_contentContext _localctx = new File_contentContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_file_content);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CLASS) | (1L << VAR) | (1L << VAL) | (1L << FUN) | (1L << PRIVATE) | (1L << PROTECTED) | (1L << PUBLIC) | (1L << STATIC))) != 0)) {
				{
				setState(70);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
				case 1:
					{
					setState(66);
					class_definition();
					}
					break;
				case 2:
					{
					setState(67);
					variable();
					}
					break;
				case 3:
					{
					setState(68);
					constant();
					}
					break;
				case 4:
					{
					setState(69);
					function();
					}
					break;
				}
				}
				setState(74);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Package_defineContext extends ParserRuleContext {
		public TerminalNode PACKAGE() { return getToken(MeowParser.PACKAGE, 0); }
		public Package_nameContext package_name() {
			return getRuleContext(Package_nameContext.class,0);
		}
		public Package_defineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_package_define; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MeowVisitor ) return ((MeowVisitor<? extends T>)visitor).visitPackage_define(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Package_defineContext package_define() throws RecognitionException {
		Package_defineContext _localctx = new Package_defineContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_package_define);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			match(PACKAGE);
			setState(76);
			package_name();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Package_usingContext extends ParserRuleContext {
		public TerminalNode USING() { return getToken(MeowParser.USING, 0); }
		public Package_nameContext package_name() {
			return getRuleContext(Package_nameContext.class,0);
		}
		public Package_usingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_package_using; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MeowVisitor ) return ((MeowVisitor<? extends T>)visitor).visitPackage_using(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Package_usingContext package_using() throws RecognitionException {
		Package_usingContext _localctx = new Package_usingContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_package_using);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			match(USING);
			setState(79);
			package_name();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Package_nameContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(MeowParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(MeowParser.ID, i);
		}
		public List<TerminalNode> DOT() { return getTokens(MeowParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(MeowParser.DOT, i);
		}
		public Package_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_package_name; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MeowVisitor ) return ((MeowVisitor<? extends T>)visitor).visitPackage_name(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Package_nameContext package_name() throws RecognitionException {
		Package_nameContext _localctx = new Package_nameContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_package_name);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(81);
					match(ID);
					setState(82);
					match(DOT);
					}
					} 
				}
				setState(87);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			setState(88);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Class_definitionContext extends ParserRuleContext {
		public ModifierContext modifier() {
			return getRuleContext(ModifierContext.class,0);
		}
		public TerminalNode CLASS() { return getToken(MeowParser.CLASS, 0); }
		public TerminalNode TYPE() { return getToken(MeowParser.TYPE, 0); }
		public TerminalNode LEFT_BRACE() { return getToken(MeowParser.LEFT_BRACE, 0); }
		public Class_bodyContext class_body() {
			return getRuleContext(Class_bodyContext.class,0);
		}
		public TerminalNode RIGHT_BRACE() { return getToken(MeowParser.RIGHT_BRACE, 0); }
		public Class_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_definition; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MeowVisitor ) return ((MeowVisitor<? extends T>)visitor).visitClass_definition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Class_definitionContext class_definition() throws RecognitionException {
		Class_definitionContext _localctx = new Class_definitionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_class_definition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			modifier();
			setState(91);
			match(CLASS);
			setState(92);
			match(TYPE);
			setState(93);
			match(LEFT_BRACE);
			setState(94);
			class_body();
			setState(95);
			match(RIGHT_BRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Class_bodyContext extends ParserRuleContext {
		public List<VariableContext> variable() {
			return getRuleContexts(VariableContext.class);
		}
		public VariableContext variable(int i) {
			return getRuleContext(VariableContext.class,i);
		}
		public List<ConstantContext> constant() {
			return getRuleContexts(ConstantContext.class);
		}
		public ConstantContext constant(int i) {
			return getRuleContext(ConstantContext.class,i);
		}
		public List<FunctionContext> function() {
			return getRuleContexts(FunctionContext.class);
		}
		public FunctionContext function(int i) {
			return getRuleContext(FunctionContext.class,i);
		}
		public List<Class_definitionContext> class_definition() {
			return getRuleContexts(Class_definitionContext.class);
		}
		public Class_definitionContext class_definition(int i) {
			return getRuleContext(Class_definitionContext.class,i);
		}
		public Class_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_body; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MeowVisitor ) return ((MeowVisitor<? extends T>)visitor).visitClass_body(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Class_bodyContext class_body() throws RecognitionException {
		Class_bodyContext _localctx = new Class_bodyContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_class_body);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CLASS) | (1L << VAR) | (1L << VAL) | (1L << FUN) | (1L << PRIVATE) | (1L << PROTECTED) | (1L << PUBLIC) | (1L << STATIC))) != 0)) {
				{
				setState(101);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
				case 1:
					{
					setState(97);
					variable();
					}
					break;
				case 2:
					{
					setState(98);
					constant();
					}
					break;
				case 3:
					{
					setState(99);
					function();
					}
					break;
				case 4:
					{
					setState(100);
					class_definition();
					}
					break;
				}
				}
				setState(105);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstantContext extends ParserRuleContext {
		public ModifierContext modifier() {
			return getRuleContext(ModifierContext.class,0);
		}
		public TerminalNode VAL() { return getToken(MeowParser.VAL, 0); }
		public TerminalNode ID() { return getToken(MeowParser.ID, 0); }
		public TerminalNode COLON() { return getToken(MeowParser.COLON, 0); }
		public TerminalNode TYPE() { return getToken(MeowParser.TYPE, 0); }
		public TerminalNode EQUALS() { return getToken(MeowParser.EQUALS, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ConstantContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constant; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MeowVisitor ) return ((MeowVisitor<? extends T>)visitor).visitConstant(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConstantContext constant() throws RecognitionException {
		ConstantContext _localctx = new ConstantContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_constant);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			modifier();
			setState(107);
			match(VAL);
			setState(108);
			match(ID);
			setState(117);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case COLON:
				{
				setState(109);
				match(COLON);
				setState(110);
				match(TYPE);
				setState(113);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==EQUALS) {
					{
					setState(111);
					match(EQUALS);
					setState(112);
					expression(0);
					}
				}

				}
				break;
			case EQUALS:
				{
				setState(115);
				match(EQUALS);
				setState(116);
				expression(0);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableContext extends ParserRuleContext {
		public ModifierContext modifier() {
			return getRuleContext(ModifierContext.class,0);
		}
		public TerminalNode VAR() { return getToken(MeowParser.VAR, 0); }
		public TerminalNode ID() { return getToken(MeowParser.ID, 0); }
		public TerminalNode COLON() { return getToken(MeowParser.COLON, 0); }
		public TerminalNode TYPE() { return getToken(MeowParser.TYPE, 0); }
		public TerminalNode EQUALS() { return getToken(MeowParser.EQUALS, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public VariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MeowVisitor ) return ((MeowVisitor<? extends T>)visitor).visitVariable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariableContext variable() throws RecognitionException {
		VariableContext _localctx = new VariableContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_variable);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			modifier();
			setState(120);
			match(VAR);
			setState(121);
			match(ID);
			setState(130);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case COLON:
				{
				setState(122);
				match(COLON);
				setState(123);
				match(TYPE);
				setState(126);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==EQUALS) {
					{
					setState(124);
					match(EQUALS);
					setState(125);
					expression(0);
					}
				}

				}
				break;
			case EQUALS:
				{
				setState(128);
				match(EQUALS);
				setState(129);
				expression(0);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionContext extends ParserRuleContext {
		public Function_defineContext function_define() {
			return getRuleContext(Function_defineContext.class,0);
		}
		public Function_bodyContext function_body() {
			return getRuleContext(Function_bodyContext.class,0);
		}
		public TerminalNode EQUALS() { return getToken(MeowParser.EQUALS, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public FunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MeowVisitor ) return ((MeowVisitor<? extends T>)visitor).visitFunction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionContext function() throws RecognitionException {
		FunctionContext _localctx = new FunctionContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_function);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			function_define();
			setState(136);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LEFT_BRACE:
				{
				setState(133);
				function_body();
				}
				break;
			case EQUALS:
				{
				setState(134);
				match(EQUALS);
				setState(135);
				expression(0);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Function_defineContext extends ParserRuleContext {
		public ModifierContext modifier() {
			return getRuleContext(ModifierContext.class,0);
		}
		public TerminalNode FUN() { return getToken(MeowParser.FUN, 0); }
		public TerminalNode ID() { return getToken(MeowParser.ID, 0); }
		public TerminalNode LEFT_BRACKET() { return getToken(MeowParser.LEFT_BRACKET, 0); }
		public Function_parameterContext function_parameter() {
			return getRuleContext(Function_parameterContext.class,0);
		}
		public TerminalNode RIGHT_BRACKET() { return getToken(MeowParser.RIGHT_BRACKET, 0); }
		public TerminalNode COLON() { return getToken(MeowParser.COLON, 0); }
		public TerminalNode TYPE() { return getToken(MeowParser.TYPE, 0); }
		public Function_defineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_define; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MeowVisitor ) return ((MeowVisitor<? extends T>)visitor).visitFunction_define(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Function_defineContext function_define() throws RecognitionException {
		Function_defineContext _localctx = new Function_defineContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_function_define);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			modifier();
			setState(139);
			match(FUN);
			setState(140);
			match(ID);
			setState(141);
			match(LEFT_BRACKET);
			setState(142);
			function_parameter();
			setState(143);
			match(RIGHT_BRACKET);
			setState(144);
			match(COLON);
			setState(145);
			match(TYPE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
